# Fedoraware

./: .autotools  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  attach  attach-gdb  attach-libnamed.sh  b64b10intstring.c  code-style.md  install-data  report-crash
.circleci/: config.yml
.github/: ISSUE_TEMPLATE
.github/ISSUE_TEMPLATE/: bug-report.md  suggestion.md
.github/workflows/: ISSUE_TEMPLATE  msbuild.yml
Fedoraware/: Fedoraware.sln  Fedoraware.sln.DotSettings
Fedoraware/Fedoraware-TF2/: Fedoraware-TF2.vcxproj  Fedoraware-TF2.vcxproj.filters  cpp.hint  packages.config
Fedoraware/Fedoraware-TF2/src/: DllMain.cpp
Fedoraware/TeamFortress2/: DVD Icon.h  TeamFortress2.aps  TeamFortress2.vcxproj  TeamFortress2.vcxproj.filters  cpp.hint  packages.config
Fedoraware/TeamFortress2/AVX2/: Fware(AVX2).dll.recipe
Fedoraware/TeamFortress2/TeamFortress2/: DLLMain.cpp
Fedoraware/enc_temp_folder/038eab5f7ebd86fa5c5dcdec31ba963/: Visuals.cpp
Fedoraware/enc_temp_folder/2e5bc0745b948ba39514b866f8d655a3/: Menu.cpp
Fedoraware/enc_temp_folder/33e2bbadab6271c829e55527927d51cd/: Hooks.cpp
Fedoraware/enc_temp_folder/6088ae665c11e9155d8046bf784a6c15/: ClientHook.cpp
Fedoraware/enc_temp_folder/976cd17438fcc0d0ef91e4b8d637442/: ConfigManager.cpp
Fedoraware/enc_temp_folder/a22e1d510f62e45d3848ced3eae3/: Fedworking.cpp
Fedoraware/enc_temp_folder/b1687a2bce736dcc15ef9d4c91e53/: Vars.h
Fedoraware/enc_temp_folder/b62ec48420aed50fdf7c1c2f3111af0/: EngineHook.cpp
Fedoraware/enc_temp_folder/c5ff591d7a8fa354844cd6f5a98cfc9/: Crits.cpp
Fedoraware/enc_temp_folder/e4fd90d388f1644a4242da857a575b28/: PredictionHook.cpp
Fedoraware/enc_temp_folder/fd535592e4fc4f554d24e3f819d9d34/: Menu.cpp
Resources/: Logo.afdesign
SE-Owned/: .gitignore  README.md  SE-Owned.sln
SE-Owned/TeamFortress2/: TeamFortress2.vcxproj  TeamFortress2.vcxproj.filters
SE-Owned/TeamFortress2/TeamFortress2/: DLLMain.cpp
SE-Owned/enc_temp_folder/6d59f7b3d413d3eb5cca075ad8791be/: EngineVGuiHook.cpp
SE-Owned/enc_temp_folder/741c1df7ef9f7a9622daa9aa16be06a/: BaseCombatWeapon.h
config_data/: names.txt  startup_sounds.txt
data/menu/: nullified-ui.xml
data/menu/nullifiedcat/: antiaim.xml  chat.xml  config.xml  crits.xml  debug.xml  hackinfo.xml  misc.xml  movement.xml  visuals.xml  warp.xml  weapons.xml
data/textures/: atlas.xcf
include/: CaptureLogic.hpp  DetourHook.hpp  MiscTemporary.hpp  SetupBonesReconst.hpp  WeaponData.hpp  bytepatch.hpp  common.hpp  conditions.hpp  crits.hpp  entitycache.hpp  entityhitboxcache.hpp  enums.hpp  helpers.hpp  hooks.hpp  itemtypes.hpp  localplayer.hpp  navparser.hpp  nospread.hpp  playerlist.hpp  playerresource.h  prediction.hpp  sconvars.hpp
include/copypasted/: CSignature.h
include/core/: interfaces.hpp  macros.hpp  netvars.hpp  offsets.hpp  sdk.hpp  sharedobj.hpp
include/hacks/: Aimbot.hpp  AntiAim.hpp  AntiCheatBypass.hpp  AutoJoin.hpp  Backtrack.hpp  CatBot.hpp  ChatCommands.hpp  ESP.hpp  FollowBot.hpp  Misc.hpp  MiscAimbot.hpp  NavBot.hpp  Spam.hpp  Trigger.hpp  UberSpam.hpp  Warp.hpp  hacklist.hpp
include/hacks/ac/: antiaim.hpp
include/hooks/: HookTools.hpp  HookedMethods.hpp  Think.hpp
include/reclasses/: CTFInventoryManager.hpp  C_BaseAnimating.hpp  C_BaseCombatWeapon.hpp  C_BaseEntity.hpp  C_BasePlayer.hpp  C_TFWeaponBase.hpp  C_TFWeaponBaseGun.hpp  C_TFWeaponBaseMelee.hpp  reclasses.hpp
include/sdk/: CGameRules.h  CServerTools.hpp  HUD.h  animationlayer.h  igamemovement.h  netmessage.hpp
include/settings/: Bool.hpp  Float.hpp  Int.hpp  Key.hpp  Manager.hpp  Registered.hpp  Rgba.hpp  Settings.hpp  String.hpp
include/visual/: colors.hpp  drawing.hpp
include/visual/imgui/: imrenderer.hpp
include/visual/menu/: GuiInterface.hpp
scripts/: dependencycheck  migrations  updater
scripts/binarypackage/: attach
src/: CMakeLists.txt  CaptureLogic.cpp  MiscTemporary.cpp  PlayerTools.cpp  SetupBonesReconst.cpp  chatlog.cpp  controlpointcontroller.cpp  crits.cpp  entitycache.cpp  entityhitboxcache.cpp  flagcontroller.cpp  hack.cpp  helpers.cpp  hitrate.cpp  hooks.cpp  hoovy.cpp  ipc.cpp  itemtypes.cpp  localplayer.cpp  navparser.cpp  nospread.cpp  nullnexus.cpp  payloadcontroller.cpp  playerlist.cpp  playerresource.cpp  prediction.cpp  projlogging.cpp  sconvars.cpp  targethelper.cpp  teamroundtimer.cpp  textmode.cpp  tfmm.cpp  trace.cpp  velocity.cpp  votelogger.cpp
src/classinfo/: CMakeLists.txt
src/copypasted/: CMakeLists.txt  CSignature.cpp
src/core/: CMakeLists.txt  interfaces.cpp  logging.cpp  netvars.cpp  overwrite_dlopen.cpp  sharedobj.cpp
src/hacks/: Aimbot.cpp  Announcer.cpp  AntiAim.cpp  AntiAntiAim.cpp  AntiBackstab.cpp  AntiCheat.cpp  AntiCheatBypass.cpp  AntiDisguise.cpp  AutoBackstab.cpp  AutoDeadringer.cpp  AutoDetonator.cpp  AutoHeal.cpp  AutoItem.cpp  AutoJoin.cpp  AutoParty.cpp  AutoReflect.cpp  AutoSticky.cpp  AutoTaunt.cpp  AutoViewmodel.cpp  Backtrack.cpp  BulletTracers.cpp  Bunnyhop.cpp  CMakeLists.txt  CatBot.cpp  ChatCommands.cpp  CritSay.cpp  DataCenter.cpp  DominateMark.cpp  DominateSay.cpp  ESP.cpp  ExplosionCircles.cpp  FollowBot.cpp  HeadESP.cpp  KillSay.cpp  KillfeedColor.cpp  Killstreak.cpp  MVMTools.cpp  Misc.cpp  MiscAimbot.cpp  NavBot.cpp  (+9 more)
src/hacks/ac/: CMakeLists.txt  aimbot.cpp  antiaim.cpp
src/hooks/: CMakeLists.txt  CreateMove.cpp  DispatchUserMessage.cpp  FireGameEvent.cpp  GetFriendPersonaName.cpp  GetUserCmd.cpp  Paint.cpp  PlayerAnimFix.cpp  RunCommand.cpp  SendDatagram.cpp  SendNetMsg.cpp  Shutdown.cpp  Think.cpp  nographics.cpp  others.cpp
src/hooks/visual/: CMakeLists.txt  DrawModelExecute.cpp  FrameStageNotify.cpp  OverrideView.cpp  (+1 more)
src/reclasses/: CMakeLists.txt  CTFInventoryManager.cpp  CTFPartyClient.cpp
src/sdk/: CMakeLists.txt  CServerTools.cpp  HUD.cpp  basically_the_whole_mathlib.cpp  setup_bones.cpp  studio.cpp  utlsymbol.cpp
src/settings/: CMakeLists.txt  ConfigUI.cpp  Manager.cpp  Registered.cpp  SettingCommands.cpp  SettingsIO.cpp
src/visual/: CMakeLists.txt  EffectGlow.cpp  EventLogging.cpp  colors.cpp  drawing.cpp  drawmgr.cpp
(+1242 files in other folders)
